--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Kayajan Counter</h1>
-  <p>Current count: <span id="count">0</span></p>
-  <button id="increment">Click to increment</button>
+  <h1>Kayajan Counter (CURRENTLY A WIP, DOES NOT WORK!!)</h1>
+  <h3>Current count: <span id="count">0</span></h3>
+  <button id="increment">One more time he didn't come back</button>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
