Added date disclaimer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			</div>
 					</div>
 	</div>
+	<br>
+	<h3><i>This counter started on 13/04/2023. All instances of not returning prior to this date are not counted.</i></h3>
 </div>
 <script>
 </script>
