--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 	<title>KayajanCounter</title>
 </head>
-<body>
+<body style="background-image: url('kcbackground.jpg');">
 <div class="container">
 	<div class="content">
 		<div class="main">
@@ -20,10 +20,10 @@
                     </div>
 				</div>
 			</div>
-					</div>
+		</div>
 	</div>
 	<br>
-	<h3><i>This counter started on 13/04/2023. All instances of not returning prior to this date are not counted.</i></h3>
+	<h3><mark><i>This counter started on 13/04/2023. All instances of not returning prior to this date are not counted.</i></mark></h3>
 </div>
 <script>
 </script>
