--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 	<title>KayajanCounter</title>
 </head>
-<body style="background-image: url('kcbackground.jpg');">
+<body style="background-image: url('images/3.png');">
 <div class="container">
 	<div class="content">
 		<div class="main">
