--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 	<title>KayajanCounter</title>
-	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="counter.js"></script>
 </head>
 <body style="background-image: url('images/3.png');">
 <div class="container">
@@ -20,7 +18,6 @@
 				<div class="count_block">
 					<div id="counter">0</div>
 					<button id="incrementButton">Add 1</button>
-					<script src="counter.js"></script>
 				</div>
 			</div>
 		</div>
@@ -28,5 +25,4 @@
 	<br>
 </div>
 </body>
-<footer><mark><i>This counter started on 13/04/2023. All instances of not returning prior to this date are not counted.</i></mark></footer>
 </html>
