--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="count_block">
 					<div class="shadow"></div>
 					<div class="count">
-						<center>3</center>
+						<center>4</center>
                     </div>
 				</div>
 			</div>
@@ -24,8 +24,11 @@
 	</div>
 	<br>
 	<h3><mark><i>This counter started on 13/04/2023. All instances of not returning prior to this date are not counted.</i></mark></h3>
+	<br>
+	<br>
+	<br>
+	<br>
+	<a href="pages/log.html"><button class="logbtn"><img class="fileicon" src="/images/file-lines-solid.svg"> View the extensive history of KC not returning</button></a>
 </div>
-<script>
-</script>
 </body>
 </html>
