--- a/pages/log.html
+++ b/pages/log.html
@@ -20,6 +20,13 @@
             <th>Reason stated for leaving</th>
         </tr>
         <tr>
+            <td>5</td>
+            <td>03/05/23</td>
+            <td>20:30</td>
+            <td>SoonTM</td>
+            <td>Food</td>
+        </tr>
+        <tr>
             <td>4</td>
             <td>28/04/23</td>
             <td>20:30</td>
